# drug_repurposing

./: README.md  initial_brainstorm_results.md  pyproject.toml
artifacts/EXP-001/: adjacency.npz  config.json  edge_table.csv  entity_table.csv  metrics.json  relation_table.csv  run.md
artifacts/EXP-002/: config.json  metrics.json  pair_features.csv  run.md
docs/: experiment_registry.md  feedback_response.md  literature_context.md  nature_grade_bar.md  roadmap.md
figures/data/: toy_laplacian_spectrum.csv
outputs/primekg_smoke/: README.md  metrics.json  sample_edges.csv
outputs/toy_experiments/: README.md  features.csv  metrics.json  robustness.csv
paper/: figures_plan.md  manuscript.md
scripts/: build_toy_figure_data.py  materialize_toy_artifacts.py  run_primekg_smoke_analysis.py  run_toy_experiments.py
src/drug_repurposing/: __init__.py  baselines.py  data.py  features.py  fingerprint.py  graph.py  graph_features.py  metrics.py  perturbations.py
src/drug_repurposing/experiments/: toy_pipeline.py
tests/: test_data_and_metrics.py  test_fingerprint.py  test_graph_features.py  test_perturbations.py
