[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-repurposing"
version = "0.1.0"
description = "Disorder-aware spectral graph learning prototypes for robust drug repurposing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
drug-repurposing-toy = "drug_repurposing.experiments.toy_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
